--- a/lessons-solved01/lessons/02A_Python_Basics_Part1.ipynb
+++ b/lessons-solved01/lessons/02A_Python_Basics_Part1.ipynb
@@ -127,17 +127,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "50680db1",
       "metadata": {
         "id": "50680db1"
       },
       "outputs": [],
       "source": [
-        "# Patient vital sign Variables\n",
-        "stystolic_bp = 120 #systolic blood pressure\n",
-        "diastolic_bp = 80 # (diastolic blood pressure)\n",
-        "oxygen_saturation = 98.5 #SpO2 percentage\n"
+        "# Patient vital sign Variables\n"
       ]
     },
     {
@@ -187,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "b21db907",
       "metadata": {
         "id": "b21db907"
@@ -197,10 +194,9 @@
         "# Fix these variable names to follow snake_case convention:\n",
         "\n",
         "# Wrong: PatientAge=65\n",
+        "patient_age = 65\n",
         "\n",
         "# Wrong: bloodPressure=120\n",
-        "\n",
-        "patient_age = 65\n",
         "blood_pressure = 120"
       ]
     },
@@ -371,14 +367,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "e162cf67",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e162cf67",
-        "outputId": "89926f99-153f-4ddd-f0b0-514f0cc82a31"
+        "outputId": "b03cd95c-0418-4628-e49a-c7674cdf9c14"
       },
       "outputs": [
         {
@@ -430,12 +426,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "6151248f",
       "metadata": {
-        "id": "6151248f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6151248f",
+        "outputId": "b4eae9d0-4db0-4da4-bf73-495993e687eb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BMI Calculation:\n",
+            "Weight: 70 kg (type: <class 'int'>)\n",
+            "Height: 1.75 m (type: <class 'float'>)\n",
+            "BMI: 22.86 (type: <class 'float'>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Example: Calculating BMI (Body Mass Index)\n",
         "weight_kg = 70  # integer: weight in kilograms\n",
@@ -465,12 +476,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "15f4bf13",
       "metadata": {
-        "id": "15f4bf13"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "15f4bf13",
+        "outputId": "4705053c-c4bd-4cc1-bc48-e53c6e44cc96"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Heart Rate Analysis:\n",
+            "Measured: 72.8 bpm (type: <class 'float'>)\n",
+            "Rounded: 72 bpm (type: <class 'int'>)\n",
+            "Target: 70 bpm (type: <class 'int'>)\n",
+            "Difference: 2 bpm (type: <class 'int'>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Example: Processing heart rate data\n",
         "measured_heart_rate = 72.8  # float from a sensor\n",
@@ -499,12 +526,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "2a5d2664",
       "metadata": {
-        "id": "2a5d2664"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2a5d2664",
+        "outputId": "d2d88cc1-3e77-4e66-f358-5bedce9c0b54"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "z = 8\n",
+            "x type = <class 'int'>\n",
+            "y type = <class 'float'>\n",
+            "z type = <class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
         "x = 5\n",
         "y = 3.8\n",
@@ -538,23 +580,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "db3d80a9",
       "metadata": {
-        "id": "db3d80a9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "db3d80a9",
+        "outputId": "50369e24-d77b-4719-e826-e40b671b8f2e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Glucose level 0 as bool: False\n",
+            "True as int: 1\n",
+            "True as float: 1\n",
+            "\n",
+            "Patient glucose: 110 mg/dL\n",
+            "Diabetes risk: True\n",
+            "Risk score: True (0 = low risk, 1 = high risk)\n"
+          ]
+        }
+      ],
       "source": [
         "# Complete the exercises below:\n",
         "\n",
         "# 1. Boolean casting - change glucose_level so it evaluates to False when cast as bool\n",
-        "glucose_level = # Your code here\n",
+        "glucose_level = 0 # Your code here\n",
         "\n",
         "print(f\"Glucose level {glucose_level} as bool: {bool(glucose_level)}\")\n",
         "\n",
         "# 2. Boolean to number casting - cast True to both int and float\n",
-        "true_as_int = # Your code here\n",
-        "true_as_float = # Your code here\n",
+        "true_as_int = 1 # Your code here\n",
+        "true_as_float = 1 # Your code here\n",
         "\n",
         "print(f\"True as int: {true_as_int}\")\n",
         "print(f\"True as float: {true_as_float}\")\n",
@@ -564,10 +624,10 @@
         "\n",
         "# Your code here: create a boolean variable 'has_diabetes_risk'\n",
         "# that is True if patient_glucose > 100, False otherwise\n",
-        "has_diabetes_risk = # Your code here\n",
+        "has_diabetes_risk = patient_glucose > 100 # Your code here\n",
         "\n",
         "# Your code here: convert the boolean to a risk score (0 or 1)\n",
-        "risk_score = # Your code here\n",
+        "risk_score = has_diabetes_risk # Your code here\n",
         "\n",
         "print(f\"\\nPatient glucose: {patient_glucose} mg/dL\")\n",
         "print(f\"Diabetes risk: {has_diabetes_risk}\")\n",
@@ -1040,7 +1100,7 @@
       "id": "b16390ea",
       "metadata": {
         "id": "b16390ea",
-        "outputId": "3457c12a-bfc7-4f99-ae43-9a39110f5090"
+        "outputId": "b9ec0572-9d5f-4be1-e4b8-e3c3bc69081f"
       },
       "outputs": [
         {
