--- a/lessons-solved01/lessons/02A_Python_Basics_Part1/9_03_25.ipynb
+++ b/lessons-solved01/lessons/02A_Python_Basics_Part1/9_03_25.ipynb
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "50680db1",
       "metadata": {
         "id": "50680db1"
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "b21db907",
       "metadata": {
         "id": "b21db907"
@@ -370,14 +370,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "e162cf67",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e162cf67",
-        "outputId": "b03cd95c-0418-4628-e49a-c7674cdf9c14"
+        "outputId": "356ff7e3-3a59-40cd-886b-31c4ca34bfec"
       },
       "outputs": [
         {
@@ -429,14 +429,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "6151248f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6151248f",
-        "outputId": "b4eae9d0-4db0-4da4-bf73-495993e687eb"
+        "outputId": "14d930c8-c8a5-45de-9701-ea8365bbefab"
       },
       "outputs": [
         {
@@ -479,14 +479,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "15f4bf13",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "15f4bf13",
-        "outputId": "4705053c-c4bd-4cc1-bc48-e53c6e44cc96"
+        "outputId": "ff0e92e8-89dc-4cdc-efb9-14739563de29"
       },
       "outputs": [
         {
@@ -529,14 +529,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "2a5d2664",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2a5d2664",
-        "outputId": "d2d88cc1-3e77-4e66-f358-5bedce9c0b54"
+        "outputId": "c9787985-ab08-4384-f6e6-b732f5e4a64f"
       },
       "outputs": [
         {
@@ -583,14 +583,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "id": "db3d80a9",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "db3d80a9",
-        "outputId": "50369e24-d77b-4719-e826-e40b671b8f2e"
+        "outputId": "da3e53a3-2cd5-4932-c8e5-631ea1b25c1d"
       },
       "outputs": [
         {
@@ -732,14 +732,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "id": "5efc837f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5efc837f",
-        "outputId": "1baffc30-be82-4993-eda4-a1f268c3d066"
+        "outputId": "b8032d5b-8b77-4aa8-f9ef-0e52f28edaa7"
       },
       "outputs": [
         {
@@ -785,14 +785,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "d5213c0f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d5213c0f",
-        "outputId": "bc8af5b9-eccf-4a38-fff0-08fe292610d2"
+        "outputId": "6ba39de5-03a8-491c-8e01-68d5f0ed4dbe"
       },
       "outputs": [
         {
@@ -843,14 +843,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "12912e44",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "12912e44",
-        "outputId": "bf0db032-1e97-4d7a-bc8b-863dddabf9c7"
+        "outputId": "0cfdc37d-e08f-4f96-8046-4fd7081ac5a4"
       },
       "outputs": [
         {
@@ -921,14 +921,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "8308cd85",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8308cd85",
-        "outputId": "46834b75-bb54-4050-e141-ecaaeca84211"
+        "outputId": "5d8841df-60b9-4db9-8a44-928f6c513012"
       },
       "outputs": [
         {
@@ -1066,14 +1066,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "id": "8f215c55",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8f215c55",
-        "outputId": "72346663-49b7-4d69-dec0-c64f1f10d84d"
+        "outputId": "5a8e0368-af58-4e94-c531-393a31cbda27"
       },
       "outputs": [
         {
@@ -1118,14 +1118,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "id": "0dfef75a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0dfef75a",
-        "outputId": "b4b76fd5-6ca2-4e1c-a3e1-9c9126eadcc9"
+        "outputId": "e461a119-c6db-4e27-aa98-40443891482a"
       },
       "outputs": [
         {
@@ -1234,11 +1234,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 60,
       "id": "b16390ea",
       "metadata": {
         "id": "b16390ea",
-        "outputId": "729a3c07-6f49-4033-eb79-b609f5f95f1c",
+        "outputId": "5f6432bd-ef3d-4996-9d8e-3fdfc9bdac96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1343,12 +1343,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "id": "38424781",
       "metadata": {
-        "id": "38424781"
+        "id": "38424781",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96564c27-6c35-4b5c-b490-85bf92934d2f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Calculated dosage: -9.0\n",
+            "\n",
+            "Step-by-step verification:\n",
+            "4^3 = 64\n",
+            "19 - 64 = -45\n",
+            "(-45) / 5 = -9.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Your task: Create the calculate_dosage() function\n",
         "# Expected result: -9.0\n",
@@ -1361,18 +1378,20 @@
         "    # Your code here: implement the calculation following PEMDAS rules\n",
         "    # Remember: use ** for exponentiation, not ^\n",
         "\n",
-        "    dosage = # Complete this calculation\n",
+        "    dosage = (19-4**3)/(5)\n",
         "    return dosage\n",
         "\n",
         "# Test your function (uncomment the lines below once you complete the function)\n",
         "# result = calculate_dosage()\n",
+        "result = calculate_dosage()\n",
         "# print(f\"Calculated dosage: {result}\")\n",
+        "print (f\"Calculated dosage: {result}\")\n",
         "\n",
         "# Once your function works, uncomment these lines to verify step-by-step:\n",
-        "# print(\"\\nStep-by-step verification:\")\n",
-        "# print(f\"4^3 = {4**3}\")\n",
-        "# print(f\"19 - 64 = {19 - 4**3}\")\n",
-        "# print(f\"(-45) / 5 = {(19 - 4**3) / 5}\")"
+        "print(\"\\nStep-by-step verification:\")\n",
+        "print(f\"4^3 = {4**3}\")\n",
+        "print(f\"19 - 64 = {19 - 4**3}\")\n",
+        "print(f\"(-45) / 5 = {(19 - 4**3) / 5}\")"
       ]
     },
     {
@@ -1399,18 +1418,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "da06eb07",
       "metadata": {
-        "id": "da06eb07"
+        "id": "da06eb07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e6a9ae0-e846-4459-9a39-67f4d4dfca39"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original patient ID: 00P12345-BME00\n",
+            "Cleaned patient ID: 12345-BM\n",
+            "\n",
+            "Original name: \"  JANE DOE  \"\n",
+            "Cleaned name: \"Jane Doe\"\n"
+          ]
+        }
+      ],
       "source": [
         "# Example: Cleaning patient ID data\n",
         "patient_id = '00P12345-BME00'\n",
         "\n",
         "# Remove leading and trailing zeros and hyphens for clean display\n",
-        "clean_id = patient_id.strip('0').strip('-')\n",
+        "clean_id = patient_id.strip('0').strip('-').strip('E').strip('P').strip('B') #B does nothing LOL!\n",
         "print(f'Original patient ID: {patient_id}')\n",
         "print(f'Cleaned patient ID: {clean_id}')\n",
         "\n",
@@ -1443,12 +1478,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "6b60e22c",
       "metadata": {
-        "id": "6b60e22c"
+        "id": "6b60e22c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3b70661-2bf9-44c4-8c9d-1295c5a98fa9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original report:\n",
+            "Patient examination shows abnormal findings in cardiac function.\n",
+            "\n",
+            "Corrected report:\n",
+            "Patient examination shows normal findings in cardiac function.\n",
+            "\n",
+            "Original unchanged: Patient examination shows abnormal findings in cardiac function.\n",
+            "New version: Patient examination shows normal findings in cardiac function.\n",
+            "\n",
+            "Symptoms as list: ['fever', 'cough', 'headache']\n"
+          ]
+        }
+      ],
       "source": [
         "# Original medical report text\n",
         "medical_report = \"Patient examination shows abnormal findings in cardiac function.\"\n",
@@ -1460,22 +1516,23 @@
         "# Remember: replace() doesn't modify the original string - it returns a new string!\n",
         "\n",
         "# Your code here:\n",
-        "corrected_report = # Complete this line using the replace() method\n",
+        "\n",
+        "corrected_report = medical_report.replace('abnormal', 'normal')  # Complete this line using the replace() method\n",
         "\n",
         "print(\"\\nCorrected report:\")\n",
         "# Uncomment the line below once you complete the exercise:\n",
-        "# print(corrected_report)\n",
+        "print(corrected_report)\n",
         "\n",
         "# Demonstrate that original string is unchanged:\n",
         "# Uncomment these lines once you complete the exercise:\n",
-        "# print(f\"\\nOriginal unchanged: {medical_report}\")\n",
-        "# print(f\"New version: {corrected_report}\")\n",
+        "print(f\"\\nOriginal unchanged: {medical_report}\")\n",
+        "print(f\"New version: {corrected_report}\")\n",
         "\n",
         "# Bonus: Try these additional string operations for medical data\n",
         "patient_symptoms = \"fever, cough, headache\"\n",
         "# Your code here: use the split() method to convert the symptoms string to a list\n",
-        "# symptom_list =\n",
-        "# print(f\"\\nSymptoms as list: {symptom_list}\")"
+        "symptom_list = patient_symptoms.replace(' ','').split(',')\n",
+        "print(f\"\\nSymptoms as list: {symptom_list}\")"
       ]
     },
     {
@@ -1515,6 +1572,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "my_array =[1,2,3,4,5]\n",
+        "print(len(my_array))\n",
+        "print(my_array[-2:5:2])\n",
+        "\n",
+        "#stepping through values stop stepping once it reaches index (until is reaching index 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V5q3tZz_6DII",
+        "outputId": "dc67ac27-9299-46c6-e769-8b500fada6c1"
+      },
+      "id": "V5q3tZz_6DII",
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "[4]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "bc899a0d",
       "metadata": {
@@ -1535,12 +1621,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "id": "ff455f60",
       "metadata": {
-        "id": "ff455f60"
+        "id": "ff455f60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90d37b5c-573d-4dd3-f174-e68d7a0e4488"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Full ECG data: [3, 5, 7, 8, 1, 2]\n",
+            "[8, 1, 2]\n",
+            "Last three measurements: [8, 1, 2]\n",
+            "Peak values: [5, 8, 2]\n",
+            "\n",
+            "Bonus slicing examples:\n",
+            "First 3 values: [3, 5, 7]\n",
+            "Middle values (skip first and last): [5, 7, 8, 1]\n",
+            "Every second value: [3, 7, 1]\n"
+          ]
+        }
+      ],
       "source": [
         "# ECG measurements (mV) taken every second\n",
         "ecg_data = [3, 5, 7, 8, 1, 2]\n",
@@ -1549,14 +1655,16 @@
         "# Your tasks:\n",
         "\n",
         "# 1. Print the last three measurements using slicing\n",
+        "print(ecg_data[3:6:1])\n",
+        "\n",
         "# Hint: Use negative indices or slice from index 3 onwards\n",
-        "last_three = # Your code here\n",
+        "last_three = ecg_data[3:6:1]\n",
         "print(f\"Last three measurements: {last_three}\")\n",
         "\n",
         "# 2. Create peak_values containing [5, 8, 2] using slicing or indexing\n",
         "# These correspond to indices 1, 3, and 5 in the ecg_data\n",
         "# You can use individual indexing or slicing techniques\n",
-        "peak_values = # Your code here\n",
+        "peak_values = ecg_data[1:6:2]\n",
         "print(f\"Peak values: {peak_values}\")\n",
         "\n",
         "# Bonus exercises (try these once you complete the main tasks):\n",
@@ -1565,10 +1673,10 @@
         "# - Get every second value: ecg_data[::2]\n",
         "\n",
         "# Uncomment these lines to try the bonus exercises:\n",
-        "# print(f\"\\nBonus slicing examples:\")\n",
-        "# print(f\"First 3 values: {ecg_data[:3]}\")\n",
-        "# print(f\"Middle values (skip first and last): {ecg_data[1:-1]}\")\n",
-        "# print(f\"Every second value: {ecg_data[::2]}\")"
+        "print(f\"\\nBonus slicing examples:\")\n",
+        "print(f\"First 3 values: {ecg_data[:3]}\")\n",
+        "print(f\"Middle values (skip first and last): {ecg_data[1:-1]}\")\n",
+        "print(f\"Every second value: {ecg_data[::2]}\")"
       ]
     },
     {
@@ -1603,12 +1711,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "acaa5f41",
       "metadata": {
-        "id": "acaa5f41"
+        "id": "acaa5f41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f8a2ce4-aafb-4e89-e959-a538e8f5a5b4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4]\n",
+            "[1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "# Issues with setting list2 equal to list1\n",
         "list1 = [1, 2, 3]\n",
@@ -1621,12 +1742,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "id": "064c2e23",
       "metadata": {
-        "id": "064c2e23"
+        "id": "064c2e23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b61571be-0aa3-4671-b607-69e3808fbd34"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n",
+            "[1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "list1 = [1, 2, 3]\n",
         "import copy\n",
